# Unfaireum

./: Cargo.toml  index.html  unfaireum.js
src/: animation.rs  background.rs  camera.rs  enemy.rs  lib.rs  main.rs  physics.rs  player.rs  ui.rs
src/game/: animation.rs  background.rs  enemy.rs  entity.rs  mod.rs  physics.rs  player.rs  ui.rs
src/game_over/: entity.rs  mod.rs  ui.rs
src/plugin/: camera.rs  mod.rs
