[package]
name = "unfaireum"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
] }
bevy_kira_audio = { version = "0.8", features = ["wav"] }
bevy-web-resizer = "0.1.0"
rand = "0.8"
